@@ -13,6 +13,8 @@ Release 5.0.7 (Jan 31 2018)
 Bug fixes
 ---------
 
+- GUI: delete scalar profile and time average when deleting the scalar itself.
+
 - Fix monitoring in GUI: always set monitoring status to on for all variables
   by default (even if no probes defined yet).
 
